# zscaler-admin-app

./: .gitignore  LICENSE  README.md  README_ja.md  config.yml  pyproject.toml
app/: sample.py
config/: config.ini.sample
lib/: zscaler_python_sdk-0.1.0-py3-none-any.whl  zscaler_python_sdk-0.1.1-py3-none-any.whl  zscaler_python_sdk-0.1.2-py3-none-any.whl
sample/: sample_adminuser.json  sample_url_category.json  sample_urlfiltering.json
zscaler-admin-app/: main.py  utils.py  zia-cli.py
zscaler_admin_app/: main.py  utils.py
