[tool.poetry]
name = "zscaler-admin-app"
version = "0.1.0"
description = ""
authors = ["yuta519 <yuta519.ka23tf@docomo.ne.jp>"]
license = "MIT"
packages = [{include = "zscaler-admin-app"}]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"
black = "^21.9b0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
adminuser = "zscaler-admin-app.zia-cli:adminUser"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

