[tool.poetry]
name = "zscaler-admin-app"
version = "0.1.0"
description = ""
authors = ["yuta519 <yuta519.ka23tf@docomo.ne.jp>"]
license = "MIT"
packages = [{include = "zscaler_admin_app"}]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.9b0"
typer = "^0.4.0"
zscaler-python-sdk = {path = "lib/zscaler_python_sdk-0.1.0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[tool.poetry.scripts]
zia = "zscaler_admin_app.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

